monitoring/overlays/ocp4-stage/grafana/grafana-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  to:
    name: grafana
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
